@@ -162,7 +162,7 @@ function Framework() {
 
     this.id = null;
     this.version = 1702;
-    this.version_header = '1.7.2 (build: 3)';
+    this.version_header = '1.7.2 (build: 4)';
 
     var version = process.version.toString().replace('v', '').replace(/\./g, '');
 
