@@ -1,5 +1,6 @@
 IN DEVELOPMENT ======= 1.7.2 (HOTFIX)
 
+- added: Array.prototype.extend(obj, [rewrite])
 - added: Utils.minifyHTML(value);
 - added: Utils.minifyScript(value);
 - added: Utils.minifyStyle(value);
